simple login logout form initialised (yet)

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    
+    {% if messages %}
+    <!-- look for flash messages like error etc. -->
+        <ul class="messages">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
     {% block content %}
 
