--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% if page == 'login' %}
+
 <div>
     <form method="POST" action="">
         {% csrf_token %}
@@ -13,8 +15,27 @@
         <input type="password" name="password" placeholder="Enter Password...">
 
         <input type="submit" value="Login">
-
     </form>
+
+    <p>Haven't signed up yet?</p>
+    <a href="{% url 'register' %}">Sign Up</a>
 </div>
+
+{% else %}
+
+<div>
+    <form method="POST" action="">
+        {% csrf_token %}
+
+        {{ form.as_p }}
+        
+        <input type="submit" value="Register">
+    </form>
+
+    <p>Already signed up?</p>
+    <a href="{% url 'login' %}">Login</a>
+</div>
+
+{% endif %}
 
 {% endblock %}
