--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -18,7 +18,8 @@
         </div>
       </div>
       <div class="layout__body">
-        <form class="form" action="" method="POST">
+        <form class="form" action="" method="POST" enctype="multipart/form-data"> 
+          <!-- enctype => specifies to the form for image uploading -->
           {% csrf_token %}
 
           {% for field in form %}
