--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,9 +24,9 @@
             <div class="header__user">
                 <a href="{% url 'update-user' %}">
                     <div class="avatar avatar--medium active">
-                        <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                        <img src="{{ request.user.avatar.url }}" />
                     </div>
-                    <p>{{request.user}} <span>@{{request.user.username}}</span></p>
+                    <p>{{request.user.name}} <span>@{{request.user.username}}</span></p>
                 </a>
                 <button class="dropdown-button">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -39,7 +39,7 @@
             {% else %}
             <!-- Not Logged In -->
             <a href="{% url 'login' %}">
-                <img src="{% static 'images/avatar.svg' %}" />
+                <img src="{% static 'images/avatar.svg '%}" />
                 <p>Login</p>
             </a>
 
