search query bug removed

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -73,7 +73,7 @@
         <div class="room__header scroll">
           <div class="room__info">
             <h3>{{ room.name }}</h3>
-            <span>{{ room.created|timesince }}</span>
+            <span>{{ room.created|timesince }} ago</span>
           </div>
           <div class="room__hosted">
             <p>Hosted By</p>
@@ -101,11 +101,11 @@
                 <div class="thread__author">
                   <a href="{% url 'user-profile' message.user.id %}" class="thread__authorInfo">
                     <div class="avatar avatar--small">
-                      <img src="{{ room.host.avatar.url }}" />
+                      <img src="{{ message.user.avatar.url }}" />
                     </div>
                     <span>@{{ message.user.username }}</span>
                   </a>
-                  <span class="thread__date">{{ message.created|timesince }}</span>
+                  <span class="thread__date">{{ message.created|timesince }} ago</span>
                 </div>
 
                 {% if request.user == message.user %}
